feat: add errors

--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -58,7 +58,7 @@ h6 {
 	--validation-color: #70a1ff;
 	--pendind-color: #ffa502;
 	--todo-color: #ff4757;
-	--done-colo: #2ed573;
+	--done-color: #2ed573;
 }
 
 body {
